Open not visible modules during unit testing for surefire 2.21