@@ -88,6 +88,7 @@
                 <maven-compiler-plugin-target-version>1.8</maven-compiler-plugin-target-version>
                 <module-info-java-file></module-info-java-file>
                 <javadoc-additionalJOption></javadoc-additionalJOption>
+                <argline-maven-surefire-plugin></argline-maven-surefire-plugin>
             </properties>
         </profile>
 
@@ -102,6 +103,7 @@
                 <maven-compiler-plugin-target-version>9</maven-compiler-plugin-target-version>
                 <javadoc-additionalJOption>-html5</javadoc-additionalJOption>
                 <module-info-java-file>module-info.java</module-info-java-file> <!-- javadoc on java 9 issues still persist-->
+                <argline-maven-surefire-plugin>--add-opens net.uniplovdiv.fmi.cs.vrs.event/net.uniplovdiv.fmi.cs.vrs.event=ALL-UNNAMED,net.uniplovdiv.fmi.cs.vrs.event.serializers --add-opens net.uniplovdiv.fmi.cs.vrs.event/test=ALL-UNNAMED,net.uniplovdiv.fmi.cs.vrs.event.serializers --add-opens net.uniplovdiv.fmi.cs.vrs.event.serializers/test=ALL-UNNAMED,net.uniplovdiv.fmi.cs.vrs.event --add-opens net.uniplovdiv.fmi.cs.vrs.event.dispatchers/test=ALL-UNNAMED</argline-maven-surefire-plugin>
             </properties>
         </profile>
     </profiles>
@@ -243,6 +245,7 @@
                 </plugin>
 
                 <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>${maven-surefire-plugin-version}</version>
                     <dependencies>
@@ -251,7 +254,15 @@
                             <artifactId>junit-platform-surefire-provider</artifactId>
                             <version>${junit-platform-surefire-provider-version}</version>
                         </dependency>
+                        <dependency>
+                            <groupId>org.apache.maven.surefire</groupId>
+                            <artifactId>surefire-logger-api</artifactId>
+                            <version>${maven-surefire-plugin-version}</version>
+                        </dependency>
                     </dependencies>
+                    <configuration>
+                        <argLine>${argline-maven-surefire-plugin}</argLine>
+                    </configuration>
                 </plugin>
 
                 <plugin>
